--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=9090
 
+spring.jpa.database:POSTGRESQL
+spring.jpa.show-sql:true
+spring.jpa.hibernate.ddl-auto:update
+spring.datasource.driver-class-name:org.postgresql.Driver
+spring.datasource.url:jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username:postgres
+spring.datasource.password:root
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation:true
