--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/tpAgiles
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=1998
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.security.user.name = tomas
 #spring.security.user.password = 123
