--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.23</version>
+        </dependency>
     </dependencies>
 
     <build>
